<resources>
    <string name="app_name">Bitacora Para Historia Clinica</string>
    <string name="pulsar">Pulsa para:</string>
    <string name="grabar">Grabar</string>
    <string name="detener">Detener</string>
    <string name="reproducir">Reproducir</string>
    <string name="d_repro">Quitar </string>
    <string name="bienvenidoInicio">Bienvenido</string>
    <string name="subtituloInicio">¡Que no se escape nada de información!</string>
    <string name="subtituloInicio2">Historia Clinica No</string>
    <string name="numero">No.</string>
    <string name="titulologin">Bienvenido a:</string>
    <string name="subtitlelogin">Tu Historia Clinica Prehospitalaria</string>
    <string name="Usuario">Usuario</string>
    <string name="botoningresar">INGRESAR</string>
    <string name="ingresoAdmin">¿Aún no te registras? Registrate</string>
    <string name="tituloadmin">Bienvenido !Registrate por acá!</string>
    <string name="subtitleadmin1">Ingresa tu correo electronico y contraseña</string>
    <string name="subtitleadmin2">de trabajo</string>
    <string name="username">Correo Electronico</string>
    <string name="correo">Correo Universitario</string>
    <string name="codigoregistro">Codigo</string>
    <string name="repiteelcodigo">Repite el Codigo</string>
    <string name="registrar">¡Registralo!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key">maps</string>
    <string name="todo">TODO</string>
    <string name="Contraseña">Ingresa tu contraseña</string>
    <string name="confiContra">Confirma tu contraseña</string>
    <string name="subtitle_inicio"> Ingresa los Datos Solicitados </string>
    <string name="finalizar">GENERAR ARCHIVO</string>
    <string name="bloque1"> Informacion de la tripulación y el Turno </string>
    <string name="fecha">DD/MM/AA</string>
    <string name="ambulancia">Ambulancia</string>
    <string name="tripulacion">Tripulacion</string>
    <string name="conductor">Conductor</string>
    <string name="aph">APH</string>
    <string name="estudiante">Estudiante</string>
    <string name="otro">Otro</string>
    <string name="evaluacion">Evaluacion de la Escena</string>
    <string name="descripcion">Describe Brevemente la Evaluación de la Escena</string>
    <string name="t_atencion">Tiempo de Atención</string>
    <string name="despacho">Despacho</string>
    <string name="en_la_escena">En La Escena</string>
    <string name="c_atencion">Centro de Atencion (Destino)</string>
    <string name="f_atencion">Finalización de la Atención</string>
    <string name="d_personal">Datos Personales</string>
    <string name="p_apellido">Primer Apellido</string>
    <string name="s_apellido">Segundo Apellido</string>
    <string name="nombres">Nombres</string>
    <string name="t_documento">Tipo de Documento</string>
    <string name="n_documento">Numero de Documento</string>
    <string name="eps">Eps</string>
    <string name="m_pre">Medicina Prepagada</string>
    <string name="genero">Genero</string>
    <string name="f_nacimiento">Fecha de Nacimiento</string>
    <string name="edad">Edad (Años)</string>
    <string name="ciudad">Ciudad</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Dirección</string>
    <string name="f_a">Familiar/Acompañante</string>
    <string name="contacto">Telefono de Contacto</string>
    <string name="m_consulta">Motivo de la Consulta</string>
    <string name="descripcion_2">Describe Brevemente el Motivo de la Consulta</string>
    <string name="enfermedad">Enfermedad Actual</string>
    <string name="descripcion_3">Describe Brevemente la Enfermedad Actual</string>
    <string name="r_sistemas">Revision por Sistemas</string>
    <string name="c_1"></string>
    <string name="c_2"></string>
    <string name="c_3"></string>
    <string name="antecedentes">Antecedentes</string>
    <string name="patologico">Patológico</string>
    <string name="quirurgico">Quirúrgico</string>
    <string name="alergico">Alérgico</string>
    <string name="farmacologico">Farmacológico</string>
    <string name="toxico">Tóxicos</string>
    <string name="host">Hospitalizacioes</string>
    <string name="ocupacional">Ocupacionales</string>
    <string name="familiares">Familiares</string>
    <string name="gineco">Gineco-obstétricos</string>
    <string name="trauma">Traumáticos</string>
    <string name="otros">Otros</string>
    <string name="titulo">TÉRMINOS Y CONDICIONES DE USO</string>
    <string name="titulo_2">Bitacora Para Historia Clinica Prehospitalaria</string>
    <string name="terminos_condiciones_l1">Estimado usuario:</string>
    <string name="terminos_condiciones_l2">¡Bienvenido! Esta aplicación es propiedad de Juliett
        Stefany Quecano Angarita, Mariana Rojas Contreras y Robinson Ayala Garcia quienes conforman
        el proyecto de investigación “Aplicación: Bitácora para Historias Clínicas” para la Tecnología
        en Atención Prehospitalaria de la Universidad Militar Nueva Granada.</string>
    <string name="terminos_condiciones_l3">Al acceder a esta aplicación y/o cualquiera de los datos registrados, usted (el usuario) acepta lo dispuesto en la Ley 1581 de 2012, "Por el cual se dictan disposiciones generales para la protección de datos personales” junto con las condiciones y términos de uso que se indican a continuación. El uso de esta App le atribuye la condición de usuario e implica la aceptación plena y sin reservas de todas y cada una de las disposiciones incluidas en estas condiciones generales de uso, por lo que, si no está de acuerdo con cualquiera de las condiciones aquí establecidas, no deberá usar esta aplicación.</string>
    <string name="terminos_condiciones_l4">El proyecto Bitácora para Historias Clínicas, se reserva
        el derecho de cambiar, modificar, adicionar o remover, de manera unilateral, cualquier parte
        o la totalidad de los presentes términos y condiciones, en cualquier tiempo y sin previo aviso.
        Dichas modificaciones serán publicadas por este mismo medio y será responsabilidad del usuario
        revisar las condiciones generales de uso que sean aplicables cada vez que ingrese a este sitio.</string>
    <string name="terminos_condiciones_l5">1.	Condiciones de acceso y utilización</string>
    <string name="terminos_condiciones_l6">La aplicación es de acceso gratuito y dirigida por un
        administrador que tendrá acceso para añadir y borrar usuarios. El usuario debe garantizar
        la autenticidad y actualidad de todos los datos que comunique y será el único responsable
        de las manifestaciones falsas o inexactas que realice.</string>
    <string name="terminos_condiciones_l7">2.	Contenido</string>
    <string name="terminos_condiciones_l8">El contenido de esta aplicación es únicamente para propósitos
        educativos. En consecuencia, el uso o no, del contenido depende exclusivamente de su situación
        particular; por lo tanto, para tomar decisiones, actuar u omitir actuar con base en el contenido
        del mismo, debe buscar consejos de docentes o profesionales.</string>
    <string name="terminos_condiciones_l9">Está expresamente prohibida la distribución de cualquier
        contenido de esta aplicación, con otros fines que no sean estrictamente académicos, sin permiso
        previo del programa en Atención Prehospitalaria y el consentimiento grabado antes de iniciar
        el registro por parte de los pacientes.</string>
    <string name="terminos_condiciones_l10">3.	Licencia limitada de uso</string>
    <string name="terminos_condiciones_l11">El administrador de la aplicación a cargo de la Tecnología
        en Atención Prehospitalaria de la UMNG, autorizará al usuario a acceder a esta App para consultar
        su contenido para propósitos informativos académicos. Se prohíbe cualquier tipo de reproducción
        del archivo generado por esta aplicación, a menos de que el programa en Atención Prehospitalaria
        autorice lo contrario, de manera expresa y por escrito.</string>
    <string name="terminos_condiciones_l12">4.	Condiciones de acceso</string>
    <string name="terminos_condiciones_l13">El usuario se compromete a no utilizar la aplicación
        para fines ilícitos o por fuera de lo autorizado o de cualquier manera que pueda lesionar
        derechos de terceros o que puedan dañar, perjudicar o deteriorar el objetivo de la App Bitácora
        para Historias Clínicas, la propiedad o la imagen de la Tecnología en Atención Prehospitalaria
        de la UMNG o de terceros.</string>
    <string name="terminos_condiciones_l14">El usuario se compromete expresamente a realizar un uso
        adecuado de la información brindada por pacientes y terceros. De manera enunciativa pero no
        limitativa, Usted se compromete a no:</string>
    <string name="terminos_condiciones_l15">1.	Utilizar el contenido para incurrir y/o incitar
        a terceros a incurrir en actividades ilícitas, ilegales o contrarias a la buena fe y al
        orden público, o para difundir contenidos o propaganda de carácter racista, xenófoba,
        pornográfico-ilegal, de apología del terrorismo o atentatorio contra los derechos humanos.</string>
    <string name="terminos_condiciones_l16">2.	Provocar daños en los sistemas físicos y lógicos de
        la Tecnología en Atención Prehospitalaria, de sus proveedores o de terceras personas, introducir
        o difundir en la red virus informáticos, troyanos, código malicioso u otros sistemas que sean
        susceptibles de provocar daños en y/o estén diseñados para interrumpir, destruir o limitar la
        funcionalidad de cualquier software, hardware o equipo de telecomunicaciones o para dañar,
        deshabilitar, sobrecargar o perjudicar la aplicación de cualquier modo.</string>
    <string name="terminos_condiciones_l17">3.	Almacenar los datos personales de otros visitantes y/o
        usuarios de la App y, en su caso, utilizar las cuentas de correo electrónico de otros visitantes
        y/o usuarios y modificar o manipular sus mensajes.</string>
    <string name="terminos_condiciones_l18">5. Responsabilidad y exclusión de garantías</string>
    <string name="terminos_condiciones_l19">El contenido de la aplicación es de carácter privado
        y tiene una finalidad meramente informativa académica para soportar el buen diligenciamiento
        de las historias clínicas. Todos los contenidos generados por esta aplicación son proporcionados
        por los pacientes, sus acompañantes y los estudiantes de la tecnología en Atención Prehospitalaria
        de la UMNG tal como estén disponibles y con posibles defectos. El uso de esta aplicación y de sus
        contenidos se hace por cuenta y riesgo del usuario.</string>
    <string name="terminos_condiciones_l20">Juliett Stefany Quecano Angarita, Mariana Rojas Contreras
        y Robinson Ayala Garcia quienes conforman el proyecto de investigación “Aplicación: Bitácora para
        Historias Clínicas” no puede garantizar la exactitud o veracidad de todo o parte de la información
        generada por esta App, ni que dicha información haya sido alterada o modificada en todo o en parte
        luego de haber exportado el PDF debido a que por seguridad las grabaciones se borran de manera
        automática después de terminar el diligenciamiento del documento. </string>
    <string name="terminos_condiciones_l21">6. Acciones en caso de incumplimiento</string>
    <string name="terminos_condiciones_l22">La Tecnología en Atención Prehospitalaria, se reserva
        el derecho a ejercer todas las acciones judiciales y/o administrativas que se encuentren
        a su disposición para exigir las responsabilidades que se deriven del incumplimiento por
        parte de un Usuario, de cualquiera de las disposiciones de estas condiciones generales de
        uso del sitio.</string>
    <string name="acepto_terminos">Aceptar</string>
</resources>