<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.RegistroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/logueoadmin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/tamaniologologin"
            android:layout_height="@dimen/tamaniologologin"
            android:src="@drawable/logo_aph"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloregistro"
            android:textSize="@dimen/tamaniotitulologin"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitleregistro"
            android:textSize="@dimen/tamaniotitulologin"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="@dimen/anchologueo"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/correo"
            android:layout_width="@dimen/anchologueo"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/correo"/>

        <EditText
            android:id="@+id/codigoregistro"
            android:layout_width="@dimen/anchologueo"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/codigoregistro"/>

        <EditText
            android:id="@+id/repiteelcodigo"
            android:layout_width="@dimen/anchologueo"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/repiteelcodigo"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:elevation="0dp"
            android:layout_gravity="center"
            android:background="@color/colorboton">

            <Button
                android:id="@+id/botonregistro"
                android:layout_width="@dimen/anchobotonlogin"
                android:layout_height="wrap_content"
                android:backgroundTint="#CAF0F8"
                android:text="@string/registrar"
                android:textColor="@color/black"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>