<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.InicioFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/principal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciargrabacion"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:gravity="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"/>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardMaxElevation="0dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/secundario">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bienvenidoInicio"
                        android:textSize="@dimen/tamaniotituloinicio"
                        android:gravity="center"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subtituloInicio"
                        android:textStyle="bold"
                        android:gravity="center"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="130dp"
                            android:layout_height="20dp"
                            android:background="@color/amarillo"
                            android:text="@string/subtituloInicio2"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>

                        <EditText
                            android:layout_width="125dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="30dp"
                            android:hint="@string/numero"
                            android:textSize="12sp" />


                    </RelativeLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subtitle_inicio"
                        android:layout_gravity="center"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            </ScrollView>

        </LinearLayout>

</FrameLayout>